# codefuse-apar

./: .cfuse.yaml  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  tech_report.md
codefuse/: __init__.py  config.py
codefuse/cli/: __init__.py  common.py  headless.py  http_server.py  interactive.py  main.py
codefuse/cli/templates/: dashboard.html
codefuse/core/: __init__.py  agent_config.py  agent_loop.py  context_engine.py  environment.py  read_tracker.py  remote_tool_executor.py  tool_executor.py
codefuse/llm/: __init__.py  base.py  exceptions.py  factory.py  retry.py
codefuse/llm/providers/: anthropic.py  gemini.py  openai_compatible.py
codefuse/observability/: __init__.py  http_logger.py  llm_messages.py  trajectory.py
codefuse/observability/logging/: __init__.py  setup.py  utils.py
codefuse/observability/metrics/: __init__.py  collector.py  models.py  trackers.py
codefuse/tools/: __init__.py  base.py  registry.py
codefuse/tools/builtin/: __init__.py  bash.py  edit_file.py  filesystem_base.py  glob.py  grep.py  list_directory.py  read_file.py  write_file.py
codefuse/tools/utils/: __init__.py  ripgrep.py
